# flat_components

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/ui/: Main.qml
src/ui/Categories/: Buttons.qml  Layers.qml  Ripples.qml  Shadows.qml  TextFields.qml  qmldir
src/ui/FlatComponents/: Button.qml  IconButton.qml  Layer.qml  Ripple.qml  Shadow.qml  TextField.qml  Theme.qml  qmldir
